--- a/www/css/app.css
+++ b/www/css/app.css
@@ -108,6 +108,29 @@
 .padding-input{
   padding-left: 5px !important;
 }
+.ContentHistory{
+  align-items: center;
+  display: flex;
+  justify-content: center; 
+  min-height:70vh;
+  font-size: 2rem;
+}
+
+.demo-card-header-pic .card-header {
+  width: 100%;
+  height: 17vw;
+  background-size:cover;
+  background-position:center;
+  color: #fff;
+}
+.searchHeight{
+  position: sticky;
+  top: 20px;
+  z-index: 1;
+}
+.card{
+  overflow: hidden;
+}
 
 @-webkit-keyframes zoom {
   from {-webkit-transform:scale(0)} 
